--- a/assets/scss/single.scss
+++ b/assets/scss/single.scss
@@ -1,22 +1,7 @@
 body {
     margin: 20px 20vw;
     margin-bottom: 50px;
-
-    @media screen and (max-width: 700px) {
-        margin: 20px 5vw;
-
-        .img-text-sidetoside {
-            flex-direction: column !important;
-
-            img {
-                width: 100%;
-                margin: 5px 0px;
-            }
-        }
-    }
 }
-
-
 
 p {
     text-align: justify;
@@ -81,5 +66,20 @@ form {
         background-color: white;
         border-radius: 5px;
         font-weight: bold;
+    }
+}
+
+body {
+    @media screen and (max-width: 700px) {
+        margin: 20px 5vw;
+
+        .img-text-sidetoside {
+            flex-direction: column !important;
+
+            img {
+                width: 100%;
+                margin: 5px 0px;
+            }
+        }
     }
 }
