--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,6 +30,11 @@
             {{ range $index, $title := $titles }}
             <div class="description no-opacity {{$title.name}}">
                 {{ i18n (printf "home.descriptions.%s" $title.name) }}
+                <div class="learn-more">
+                    <a href="{{$title.name}}">
+                        {{ i18n "home.learn_more" }}
+                    </a>
+                </div>
             </div>
             {{ end }}
 
@@ -37,7 +42,7 @@
             <div class="titles">
                 {{ range $index, $title := $titles }}
                 <div class="title" data-name="{{$title.name}}">
-                    <a href="{{$title.name}}" class="btn">
+                    <a href="#" class="btn">
                         <svg width="190" height="62">
                             <defs>
                                 <linearGradient id="grad1">
@@ -52,9 +57,7 @@
                 </div>
                 {{ end }}
             </div>
-            <div class="learn-more">
-                {{ i18n "home.learn_more" }}
-            </div>
+
 
 
         </div>
