--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,4 +17,6 @@
     <div class="title">{{i18n (printf "home.%s" .Page.Title)}}</div>
 
     {{.Content}}
+
+    {{ partial "footer.html" }}
 </body>
