--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -6,11 +6,9 @@
     // overflow-y: hidden;
 }
 
-
-
 .titles {
     position: absolute;
-    bottom: 20px;
+    bottom: 35px;
     text-align: center;
 
     .title {
@@ -90,6 +88,8 @@ h1 {
 
 .text-container {
     width: 95vw;
+    position: relative;
+    height: 100%;
 
     .description {
         transition: opacity 200ms ease;
